--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
-# Configurar o flyway
-spring.flyway.enable=true
+# Configurar o Flyway
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migrations
 spring.flyway.baseline-on-migrate=true
-
-
